# KinectRos2

./: .gitignore  .gitmodules  99-kinect-devices.rules  README.md  actions.md  device_setup.sh  how to run_velodyne.md
bash_scripts/: network_setup.sh
bash_scripts/container/: apply_camera_config.sh  bashrc_extensions.sh  gen_realsense_launch.py  launch_dual_kinect2.sh  record.sh  record_kinect_bag_compare.sh  refresh_usb.sh  report_bag_topic_size.py  test_dual_kinect.sh  test_kinect2.sh  tmux_launch.sh  tmux_terminate.sh
config/: README.md  SETUP.md  dual_kinect.rviz  dual_kinect_serials.yaml  kinect_cameras.yaml  realsense_cameras.yaml  recording.yaml  use_this.rviz  velodyne.yaml
docker/: Dockerfile  Dockerfile copy  docker-compose.yml  docker_start.sh  tmux.conf
docs/: ARCHITECTURE_DUAL_KINECT.md  QUICK_REFERENCE.md  SETUP_GUIDE.md
kinect2_ros2/: README.md
kinect2_ros2/kinect2_bridge/: CMakeLists.txt  README.md  package.xml
kinect2_ros2/kinect2_bridge/include/kinect2_bridge/: kinect2_definitions.h
kinect2_ros2/kinect2_bridge/launch/: dual_kinect2.launch.py  dual_kinect2_simple.launch.py  kinect2_bridge_launch.yaml  kinect2_dual_dynamic.launch.py  rtabmap.launch.py
kinect2_ros2/kinect2_bridge/scripts/: dynamic_camera_tf.py
kinect2_ros2/kinect2_bridge/src/: kinect2_bridge.cpp
kinect2_ros2/kinect2_calibration/: CMakeLists.txt  README.md  package.xml
kinect2_ros2/kinect2_calibration/include/kinect2_calibration/: kinect2_calibration_definitions.h
kinect2_ros2/kinect2_registration/: CMakeLists.txt  README.md  package.xml
kinect2_ros2/kinect2_registration/include/kinect2_registration/: kinect2_console.h  kinect2_registration.h
kinect2_ros2/kinect2_registration/src/: depth_registration_cpu.cpp  depth_registration_cpu.h  depth_registration_opencl.cpp  depth_registration_opencl.h  kinect2_registration.cpp
realsense_ros2/: realsense_config.yaml
realsense_ros2/realsense_recorder/: package.xml  setup.cfg  setup.py
realsense_ros2/realsense_recorder/config/: recording_config.yaml
realsense_ros2/realsense_recorder/launch/: realsense_recording_service.launch.py
realsense_ros2/realsense_recorder/realsense_recorder/: colour_video_recorder.py  recording_config.py  recording_manager.py
realsense_ros2/realsense_tf_broadcaster/: package.xml  setup.cfg  setup.py
realsense_ros2/realsense_tf_broadcaster/launch/: realsense_multi_camera.launch.py  realsense_poe_relay.launch.py
realsense_ros2/realsense_tf_broadcaster/realsense_tf_broadcaster/: topic_relay.py
realsense_ros2/realsense_tf_broadcaster/rviz/: realsense_map.rviz
ros2_ws/ros2_ws/: kinectrviz.rviz
sensor_recorder/: package.xml  setup.cfg  setup.py
sensor_recorder/launch/: unified_recording.launch.py
sensor_recorder/sensor_recorder/: __init__.py  colour_video_recorder.py  recording_manager.py  topics.py
session_recorder/: package.xml  setup.cfg  setup.py
session_recorder/launch/: unified_recording.launch.py
session_recorder/session_recorder/: __init__.py  recording_manager.py  video_to_image_publisher.py
velodyne_ros/: config.yaml
velodyne_ros/velodyne/launch/: velodyne-all-nodes-VLP16-launch.py  velodyne_with_tf.launch.py
velodyne_ros/velodyne_driver/config/: VLP16-velodyne_driver_node-params.yaml  velodyne_tf.yaml
velodyne_ros/velodyne_driver/launch/: velodyne_driver_node-VLP16-launch.py
