<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect2_calibration</name>
  <version>0.0.0</version>
  <description>The kinect2_calibration package</description>
  <maintainer email="paul@todo.todo">paul</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>image_transport</depend>
  <depend>compressed_image_transport</depend>
  <depend>compressed_depth_image_transport</depend>
  <depend>kinect2_registration</depend>
  <depend>kinect2_bridge</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
