<?xml version="1.0"?>
<package format="3">
  <name>realsense_tf_broadcaster</name>
  <version>0.1.0</version>
  <description>Publish map-frame static transforms for configured RealSense cameras.</description>
  <maintainer email="oali@example.com">oali</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>